update pd and quacktrip & music 47 welcome
this is also being updated in the context of the transition from linode to ec2.

--- a/index.html
+++ b/index.html
@@ -1,24 +1,24 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>OCH's Server</title>
+	<title>OCH's Server for Music 47</title>
 </head>
 <body>
 <h1>och.pw</h1>
 <br>
-<p>Welcome to OCH's Server.
+<p>Welcome to OCH's server for the Music 47 class.
 <br>
 You can use this server with all of the <a href="http://msp.ucsd.edu/tools/quacktrip/">quacktrip</a> software family.
 <br>
-<!-- This server will be alive between Oct 18th and Dec 31st, 2020. -->
-This server is available to the public: check the <a href="calendar-and-more.html">calendar & more</a>.
+<!-- This server will be alive at least during Winter quarter 2021 and Spring break. -->
+This server is available for the students in Music 47, during Winter quarter and Spring break, 2021: check the <a href="calendar-and-more.html">calendar & more</a>.
 <br>
 Special thanks to <a href="http://msp.ucsd.edu">Miller Puckette</a> for giving the world what it needs now.
 <br>
 <br>
 OCH</p>
 <div style="position: fixed; bottom: 0;">
-  <p>using: pd-0.51-3test1 / quack-and-netty-0.91</p>
+  <p>using: pd-0.51-4 / quack-and-netty-0.92-test1</p>
 </div>
 </body>
 </html>
