update calendar dates
and other text changes

--- a/calendar-and-more.html
+++ b/calendar-and-more.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>OCH's Server - Calendar and More</title>
+	<title>OCH's Server for Music 47 - Calendar and More</title>
 </head>
 <body>
 <h1>och.pw</h1>
 <h2>Calendar and More</h2>
-<p>This server is available to the public for free.
+<p>This server is available to the students in Music 47, for free.
 <br>
-It was intended to stay online between Oct 18th and Dec 30th, 2020.
+It is intended to stay online during Winter quarter and Spring break, 2021.
 <br>
-There is absolutely no guarantee of up time, and no support is provided.
+There is no guarantee of up time, and no 24/7 support is provided.
 <br>
-This was built as a research project, and you should use at your own risk.</p>
-<p>To avoid overloading the server I'd like to invite interested users to use the calendar.
+This was built as a research project, and you should use it being mindful of that.</p>
+<p>To avoid overloading the server I'd like to invite the interested users to use the calendar.
 <br>
-You can <a href="https://calendar.google.com/calendar/selfsched?sstoken=UVBET2VnS205RmFXfGRlZmF1bHR8ODM2YTJiMjBmYTNiZjZkZTYyZTMzNjk4ZGFjNmNiZDc">sign up for a time slot</a> using your google account. But please, keep in mind that:
+You can <a href="https://calendar.google.com/calendar/selfsched?sstoken=UVBET2VnS205RmFXfGRlZmF1bHR8ODM2YTJiMjBmYTNiZjZkZTYyZTMzNjk4ZGFjNmNiZDc">sign up for a time slot</a> using your @uci.edu google account. But please, keep in mind that:
 <br>
 - your email address might become visible to other users who use this calendar.
 <br>
