--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 You can use this server with all of the <a href="http://msp.ucsd.edu/tools/quacktrip/">quacktrip</a> software family.
 <br>
 <!-- This server will be alive at least during Winter quarter 2021 and Spring break. -->
-This server is available for the students in Music 47, during Winter quarter and Spring break, 2021: check the <a href="calendar-and-more.html">calendar & more</a>.
+This server is available for the students in Music 47: check the <a href="calendar-and-more.html">calendar & more</a>.
 <br>
 Special thanks to <a href="http://msp.ucsd.edu">Miller Puckette</a> for giving the world what it needs now.
 <br>
