update quacktrip version to 0.92

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ Special thanks to <a href="http://msp.ucsd.edu">Miller Puckette</a> for giving t
 <br>
 OCH</p>
 <div style="position: fixed; bottom: 0;">
-  <p>using: pd-0.51-4 / quack-and-netty-0.92-test1</p>
+  <p>using: pd-0.51-4 / quack-and-netty-0.92</p>
 </div>
 </body>
 </html>
