SR and new version

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>OCH's Server for Music 47</title>
+        <title>OCH's Server for Music 47</title>
 </head>
 <body>
 <h1>och.pw</h1>
@@ -18,7 +18,7 @@ Special thanks to <a href="http://msp.ucsd.edu">Miller Puckette</a> for giving t
 <br>
 OCH</p>
 <div style="position: fixed; bottom: 0;">
-  <p>using: pd-0.51-4 / quack-and-netty-0.92</p>
+  <p>using: pd-0.51-4 / quack-and-netty-0.92 / 48k</p>
 </div>
 </body>
 </html>
